Updated dates for recent update, added polish
No changes to food values in The End is Nigh, except Froggle Bunwich now
works
Added styles to linkable text engine, made "not" recipe requirements
clearer
Added dry time for meats
Added hover text to recipe finders
Updated image for Rot

--- a/html/index.htm
+++ b/html/index.htm
@@ -44,6 +44,9 @@
 		table th { border-bottom: 2px solid black; }
 		table.links span.link { padding-left: 2px; padding-right: 2px; padding-bottom: 1px; padding-top: 1px; display: inline-block; border: 1px solid #999; background: #ccc; background: linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -moz-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(170,170,170,1)), color-stop(50%,rgba(170,170,170,0))); border-radius: 3px; cursor: pointer; }
 		table.links span.link:hover { opacity: 0.8; }
+		table.links span.link.left { border-top-left-radius: 0px; border-bottom-left-radius: 0px; border-left: none; }
+		table.links span.link.right { border-top-right-radius: 0px; border-bottom-right-radius: 0px; }
+		table span.link.strike { text-decoration: line-through; color: #755; border: 1px solid #bbb; }
 		span.link img { width: 20px; height: 20px; vertical-align: text-bottom; }
 		#footer { padding-left: 10px; padding-right: 10px; color: #777; text-align: center; }
 		#footer a { color: #585858; }
@@ -103,7 +106,7 @@
 				and <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
 			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium (and mobile), Firefox, Safari (and mobile), and Internet Explorer 9+</p>
-			<p>The food and recipe database should be current as of the <strong>Doorway to Adventure update, March 26th</strong>.</p>
+			<p>The food and recipe database should be current as of the <strong>The End is Nigh update, April 9th</strong>.</p>
 			<h2>About Don't Starve Food</h2>
 			<p>
 				<strong>Perish time</strong> is the time before a food item becomes <strong>Rot</strong>. <strong>Halfway</strong> through this period, it will go <strong>stale</strong>, and give <strong><span id="stalehealth"></span> health</strong> and <strong><span id="stalehunger"></span> hunger</strong>.
