Fixed excluded ingredient style issue in non-linked tables

--- a/html/index.htm
+++ b/html/index.htm
@@ -46,7 +46,8 @@
 		table.links span.link:hover { opacity: 0.8; }
 		table.links span.link.left { border-top-left-radius: 0px; border-bottom-left-radius: 0px; border-left: none; }
 		table.links span.link.right { border-top-right-radius: 0px; border-bottom-right-radius: 0px; }
-		table span.link.strike { text-decoration: line-through; color: #755; border: 1px solid #bbb; }
+		table span.link.strike { text-decoration: line-through; color: #755; }
+		table.links span.link.strike { border: 1px solid #bbb; }
 		span.link img { width: 20px; height: 20px; vertical-align: text-bottom; }
 		#footer { padding-left: 10px; padding-right: 10px; color: #777; text-align: center; }
 		#footer a { color: #585858; }
