changed to reference foodguide_source.js instead
so that I can check changes without having to pack the js between every change

--- a/html/index.htm
+++ b/html/index.htm
@@ -143,6 +143,6 @@
 	<div id="footer">
 		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Unofficial food guide <a href="foodguide_source.js">source code</a> made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
 	</div>
-	<script type="text/javascript" src="foodguide.js"></script>
+	<script type="text/javascript" src="foodguide_source.js"></script>
 </body>
 </html>
