fixed temps, dlc tags on recipe page
Added sanity %, and added some more missing uncookable foods, including
Together ones

--- a/html/index.htm
+++ b/html/index.htm
@@ -103,20 +103,25 @@
 				This is an unofficial tool to help avoid starvation in <a href="http://www.dontstarvegame.com/">Don't Starve</a>,
 				an uncompromising wilderness survival game full of science and magic,
 				by <a href="http://kleientertainment.com/">Klei Entertainment</a>,
-				available on the <a href="https://chrome.google.com/webstore/detail/dont-starve/hiledapehlkhdehbhppgmekfalnlfajc">Chrome Web Store</a>
-				and <a href="http://store.steampowered.com/app/219740/">Steam</a>.
+				available on <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
 			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium (and mobile), Firefox, Safari (and mobile), and Internet Explorer 9+</p>
-			<p>The food and recipe database should be current as of the <strong>Where there's a Wilson... update, April 30th 2014</strong>.</p>
+			<p>The food and recipe database should be current as of <strong>December 12th 2015</strong>.</p>
 			<h2>About Don't Starve Food</h2>
 			<p>
-				<strong>Perish time</strong> is the time before a food item becomes <strong>Rot</strong>. <strong>Halfway</strong> through this period, it will go <strong>stale</strong>, and give <strong><span id="stalehealth"></span> health</strong> and <strong><span id="stalehunger"></span> hunger</strong>.
+				<strong>Perish time</strong> is the time before a food item becomes <strong>Rot</strong>. <strong>Halfway</strong> through this period, it will go <strong>stale</strong>, and give <strong><span id="stalehealth"></span> health</strong> and <strong><span id="stalehunger"></span> hunger</strong>, as well as <strong>no sanity</strong>.
 				Food <strong>spoils</strong> at <strong>three quarters</strong>, giving only <strong><span id="spoiledhunger"></span> hunger</strong> and <strong>no longer giving any health</strong>.
 				Eating spoiled food will decrease sanity by <strong><span id="spoiledsanity"></span></strong>.
 				Food <strong>dropped on the ground</strong> will <strong>perish</strong> at a rate of <strong><span id="perishground"></span></strong> (or <strong><span id="perishwinter"></span></strong> in <strong>Winter</strong>, <strong><span id="perishsummer"></span></strong> in <strong>Summer</strong>), while keeping it in the <strong>Ice Box</strong> will reduce the rate to <strong><span id="perishfridge"></span></strong>.
 			</p>
+			<p>Foods that provide <strong>warmth</strong> or <strong>cooling</strong> work like a thermal stone; when eaten, they provide a heat source at a particular temperature for a period of time. Eating another heating/cooling food within this period will erase the earlier effect.</p>
 			<p><strong>Recipe priority</strong> determines which recipe a food combination will make; only the highest-priority possible recipes can be produced by a batch of ingredients.</p>
 			<p>In recipe requirements, cooked/uncooked usually doesn't make a difference. If it does, then only the valid form will be listed.</p>
+			<h2>About DLC and Don't Starve Together</h2>
+			<p>
+				All foods in <strong>Don't Starve</strong> and <strong>Reign of Giants</strong> are present in <strong>Don't Starve Together</strong>, with some additional non-crock-pot foods in <strong>Together</strong>.
+				All foods in <strong>Don't Starve</strong> and <strong>Reign of Giants</strong> are also present in <strong>Shipwrecked</strong>, although some may be unobtainable (such as moleworms).
+			</p>
 			<h2>Simulator</h2>
 			<p>
 				The Simulator works like a Crock Pot: add items, and it will tell you what food will be prepared. Note that only the highest-priority recipes will be candidates when actually cooking in-game.
