--- a/html/index.htm
+++ b/html/index.htm
@@ -111,7 +111,7 @@
 				available on <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
 			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium (and mobile), Firefox, Safari (and mobile), and Internet Explorer 9+</p>
-			<p>The food and recipe database should be current as of <strong>December 12th 2015</strong>.</p>
+			<p>The food and recipe database should be current as of <strong>January 14th 2016</strong> (The Eye of the Tiger Shark Update).</p>
 			<h2>About Don't Starve Food</h2>
 			<p>
 				<strong>Perish time</strong> is the time before a food item becomes <strong>Rot</strong>. <strong>Halfway</strong> through this period, it will go <strong>stale</strong>, and give <strong><span id="stalehealth"></span> health</strong> and <strong><span id="stalehunger"></span> hunger</strong>, as well as <strong>no sanity</strong>.
