Content/link updates

--- a/html/index.htm
+++ b/html/index.htm
@@ -143,11 +143,10 @@
 				The Statistics Analyzer tab is for those who just want to explore ingredient combinations. It will calculate every valid ingredient combination possible (using an "ideal" ingredient selection, generally excluding uncooked food) and allows filtration by recipe and ingredient contents. Computation may take some time on slower computers.
 			</p>
 			<h2>Links</h2>
-			<p><a href="https://code.google.com/p/dont-starve-food/source/list" target="_blank">Food Guide Change Log</a>
-			<p><a href="https://code.google.com/p/dont-starve-food/issues/list" target="_blank">Report Food Guide Bugs or Issues</a>
+			<p><a href="https://github.com/bluehexagons/foodguide/commits/master" target="_blank">Food Guide Change Log</a>
+			<p><a href="https://github.com/bluehexagons/foodguide/issues" target="_blank">Report Food Guide Bugs or Issues</a>
 			<p><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve Official Website</a>
 			<p><a href="http://dont-starve-game.wikia.com/" target="_blank">Don't Starve on Wikia</a>
-			<p><a href="http://dontstarvewiki.net/" target="_blank">Don't Starve Wiki (mostly abandoned)</a>
 		</div>
 	</div>
 	<div id="footer">
