--- a/html/index.htm
+++ b/html/index.htm
@@ -5,10 +5,10 @@
 	<link rel="shortcut icon" href="icon.png" />
 	<meta charset='utf-8' />
 	<style type="text/css">
-		body { background-blend-mode: multiply; background: #ccc; width: 1000px; margin-left: auto; margin-right: auto; overflow: scroll; font-family: sans-serif; }
+		body { background: #ccc url('img/backgroundstripes.png'); background-size: 100%; background-attachment: fixed; width: 1000px; margin-left: auto; margin-right: auto; overflow: scroll; font-family: sans-serif; }
 		a { color: #333; }
 		a:hover { color: #888; }
-		#navbar { position: relative; left: 0px; top: 0px; display: block; z-index: 1; }
+		#navbar { position: relative; left: 0px; top: 0px; display: block; z-index: 1; padding-left: 0; }
 		#navbar li { display: inline-block; list-style-type: none; padding-left: 0px; margin-left: 0px; border: 1px solid black; background: #ddd; cursor: pointer; margin-bottom: 8px; vertical-align: top; padding: 4px; }
 		#navbar li.selected { font-weight: bold; background: #fff; padding-top: 8px; margin-bottom: 0px; border-radius: 0px 0px 6px 6px; border-bottom: 2px solid black; }
 		#navbar a { color: inherit; text-decoration: none; }
@@ -48,15 +48,10 @@
 		table.links span.link.right { border-top-right-radius: 0px; border-bottom-right-radius: 0px; }
 		table span.link.strike { text-decoration: line-through; color: #755; }
 		table.links span.link.strike { border: 1px solid #bbb; }
-		table.modes { width: inherit; }
-		table.modes span.link img { width: 40px; height: 40px; }
-		table.modes span.link { display: inline-block; border: 1px solid #999; background: #ccc; background: linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -moz-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(170,170,170,1)), color-stop(50%,rgba(170,170,170,0))); border-radius: 3px; cursor: pointer; opacity: 0.5; text-align: center; }
-		table.modes span.selected { opacity: 1; }
-		table.modes td { border: none; background: none; }
 		span.link img { width: 20px; height: 20px; vertical-align: text-bottom; }
-		#footer { padding-left: 10px; padding-right: 10px; color: #fff; text-align: center; }
-		#footer a { color: #ccc; }
-		#footer a:hover { color: #fff; }
+		#footer { padding-left: 10px; padding-right: 10px; color: #777; text-align: center; }
+		#footer a { color: #585858; }
+		#footer a:hover { color: #777; }
 		button.makablebutton { font-size: 14pt; margin: 4px; padding-left: 2px; padding-right: 2px; padding-bottom: 1px; padding-top: 1px; display: inline-block; border: 1px solid #999; background: #ccc; background: linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -moz-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(170,170,170,1)), color-stop(50%,rgba(170,170,170,0))); border-radius: 3px; cursor: pointer; }
 		div.recipeFilter img { opacity: 0.6; margin: 4px; padding-left: 2px; padding-right: 2px; padding-bottom: 1px; padding-top: 1px; display: inline-block; border: 1px solid #999; background: #ccc; background: linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -moz-linear-gradient(to top, rgba(170, 170, 170, 1) 0%,rgba(170, 170, 170, 0) 50%); background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(170,170,170,1)), color-stop(50%,rgba(170,170,170,0))); border-radius: 3px; cursor: pointer; }
 		div.recipeFilter img:hover { opacity: 0.8; }
@@ -66,6 +61,34 @@
 		div.foodFilter img.selected { border-width: 3px; margin: 2px; opacity: 1; }
 		div.foodFilter img.excluded { border-width: 3px; border-color: #711; margin: 2px; opacity: 0.8; background: #fcc; }
 		strong { color: #333; }
+		#navbar li.dlc {
+			padding: 0 0 0 4px;
+			margin: 0;
+			cursor: default;
+			line-height: 0;
+			border: none;
+			background: none;
+			position: relative;
+			top: 12px;
+		}
+		#navbar li.dlc img {
+			padding: 2px;
+			margin: 0 2px 0 2px;
+			width: 30px;
+			height: 30px;
+			border: none;
+			cursor: pointer;
+			opacity: 0.25;
+		}
+		#navbar li.dlc img:hover {
+			opacity: 0.66;
+		}
+		#navbar li.dlc img.enabled {
+			opacity: 1;
+		}
+		#navbar li.dlc img.enabled:hover {
+			opacity: 1;
+		}
 	</style>
 </head>
 <body>
