--- a/html/index.htm
+++ b/html/index.htm
@@ -173,8 +173,8 @@
 		</div>
 	</div>
 	<div id="footer">
-		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Unofficial food guide <a href="foodguide_source.js">source code</a> made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
+		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Unofficial food guide <a href="foodguide.js">source code</a> made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
 	</div>
-	<script type="text/javascript" src="foodguide_source.js"></script>
+	<script type="text/javascript" src="foodguide.js"></script>
 </body>
 </html>
