--- a/html/index.htm
+++ b/html/index.htm
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Don't Starve Food Guide</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 	<link rel="shortcut icon" href="icon.png" />
 	<meta charset='utf-8' />
 	<link rel="stylesheet" href="style/main.css">
@@ -9,16 +10,18 @@
 <body>
 <div id="background"></div>
 <div id="content">
-	<ul id="navbar">
-		<li data-tab="simulator">Simulator</li>
-		<li data-tab="discovery">Discovery</li>
-		<li data-tab="foodlist">Food List</li>
-		<li data-tab="crockpot">Recipe List</li>
-		<li data-tab="statistics">Statistics Analyzer</li>
-		<li data-tab="help">Help</li>
-		<li><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve</a></li>
-	</ul>
 	<div id="main">
+		<ul id="navbar">
+			<span class="listmenu">
+				<li data-tab="simulator">Simulator</li>
+				<li data-tab="discovery">Discovery</li>
+				<li data-tab="foodlist">Food List</li>
+				<li data-tab="crockpot">Recipe List</li>
+				<li data-tab="statistics">Statistics Analyzer</li>
+				<li data-tab="help">Help</li>
+				<li><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve</a></li>
+			</span>
+		</ul>
 		<div id="simulator">
 			<div style="margin-bottom: 6pt">Add ingredients to see what they make.</div>
 			<input type="text" class="ingredientpicker" data-type="food" data-cookable="true" style="width: 25%" placeholder="Filter ingredients" /><div id="ingredients" class="ingredientlist"><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span><span class="ingredient"></span></div>
@@ -91,7 +94,7 @@
 	<div id="footer">
 		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Unofficial food guide <a href="foodguide.js">source code</a> made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
 	</div>
-	<a href="https://github.com/bluehexagons/foodguide" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+	<a class="github-link" href="https://github.com/bluehexagons/foodguide" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 	<script type="text/javascript" src="foodguide.js"></script>
 </div>
 </body>
