Fix some stuff, update some words

--- a/html/index.htm
+++ b/html/index.htm
@@ -53,8 +53,8 @@
 				by <a href="http://kleientertainment.com/">Klei Entertainment</a>,
 				available on <a href="http://store.steampowered.com/app/219740/">Steam</a>.
 			</p>
-			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium (and mobile), Firefox, Safari (and mobile), and Edge</p>
-			<p>The food and recipe database should be current as of the <strong>Unleash the Quacken update, February 25th 2016</strong>.</p>
+			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium, Firefox, Safari, and Edge; on desktop or mobile</p>
+			<p>Maintained as a community effort. Last content addition: <strong>November 5, 2022</strong></p>
 			<h2>About Don't Starve Food</h2>
 			<p>
 				<strong>Perish time</strong> is the time before a food item becomes <strong>Rot</strong>. <strong>Halfway</strong> through this period, it will go <strong>stale</strong>, and give <strong><span id="stalehealth"></span> health</strong> and <strong><span id="stalehunger"></span> hunger</strong>, as well as <strong>no sanity</strong>.
@@ -85,7 +85,7 @@
 				The Statistics Analyzer tab is for those who just want to explore ingredient combinations. It will calculate every valid ingredient combination possible (using an "ideal" ingredient selection, generally excluding uncooked food) and allows filtration by recipe and ingredient contents. Computation may take some time on slower computers.
 			</p>
 			<h2>Links</h2>
-			<p><a href="https://github.com/bluehexagons/foodguide/commits/master" target="_blank">Food Guide Change Log</a>
+			<p><a href="https://github.com/bluehexagons/foodguide/commits/main" target="_blank">Food Guide Change Log</a>
 			<p><a href="https://github.com/bluehexagons/foodguide/issues" target="_blank">Report Food Guide Bugs or Issues</a>
 			<p><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve Official Website</a>
 			<p><a href="http://dont-starve-game.wikia.com/" target="_blank">Don't Starve on Wikia</a>
@@ -94,7 +94,13 @@
 	<div id="footer">
 		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Unofficial food guide <a href="https://github.com/bluehexagons/foodguide">source code</a> made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
 	</div>
-	<a class="github-link" href="https://github.com/bluehexagons/foodguide" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+	<a class="github-link" href="https://github.com/bluehexagons/foodguide" target="_blank">
+		<img
+			style="position: absolute; top: 0; right: 0; border: 0;"
+			src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67"
+			alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+		>
+	</a>
 	<script type="module" src="foodguide.js"></script>
 	<script nomodule>
 		alert("Please use a modern browser!")
