Preload script files

--- a/html/index.htm
+++ b/html/index.htm
@@ -3,6 +3,12 @@
 <head>
 	<title>Don't Starve Food Guide</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+	<link rel="modulepreload" href="constants.js">
+	<link rel="modulepreload" href="food.js">
+	<link rel="modulepreload" href="foodguide.js">
+	<link rel="modulepreload" href="recipes.js">
+	<link rel="modulepreload" href="utils.js">
+
 	<link rel="shortcut icon" href="icon.png" />
 	<meta charset='utf-8' />
 	<link rel="stylesheet" href="style/main.css">
