--- a/html/index.htm
+++ b/html/index.htm
@@ -19,13 +19,13 @@
 	<div id="main">
 		<ul id="navbar">
 			<span class="listmenu">
-				<li data-tab="simulator">Simulator</li>
-				<li data-tab="discovery">Discovery</li>
-				<li data-tab="foodlist">Food List</li>
-				<li data-tab="crockpot">Recipe List</li>
-				<li data-tab="statistics">Statistics Analyzer</li>
-				<li data-tab="help">Help</li>
-				<li><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve</a></li>
+				<li data-tab="simulator" title="Crock Pot recipe simulation">Simulator</li>
+				<li data-tab="discovery" title="Add inventory items to find recipes">Discovery</li>
+				<li data-tab="foodlist" title="View all food in the selected DLC">Food List</li>
+				<li data-tab="crockpot" title="View all recipes for the selected DLC">Recipe List</li>
+				<li data-tab="statistics" title="Find all recipes (unstable)">Statistics Analyzer</li>
+				<li data-tab="help" title="Help and information">Help</li>
+				<li><a title="Give Klei your money" href="http://www.dontstarvegame.com/" target="_blank">Don't Starve</a></li>
 			</span>
 		</ul>
 
@@ -71,6 +71,8 @@
 
 			<h2>About Don't Starve Food</h2>
 
+			<h3>Food Mechanics</h3>
+
 			<p>
 				<strong>Perish time</strong> is the time before a food item becomes <strong>Rot</strong>. <strong>Halfway</strong> through this period, it will go <strong>stale</strong>, and give <strong><span id="stalehealth"></span> health</strong> and <strong><span id="stalehunger"></span> hunger</strong>, as well as <strong>no sanity</strong>.
 				Food <strong>spoils</strong> at <strong>three quarters</strong>, giving only <strong><span id="spoiledhunger"></span> hunger</strong> and <strong>no longer giving any health</strong>.
@@ -80,12 +82,16 @@
 			<p>Foods that provide <strong>warmth</strong> or <strong>cooling</strong> work like a thermal stone; when eaten, they provide a heat source at a particular temperature for a period of time. Eating another heating/cooling food within this period will replace the earlier effect.</p>
 			<p><strong>Recipe priority</strong> determines which recipe a food combination will make; only the highest-priority possible recipes can be produced by a batch of ingredients.</p>
 			<p>In recipe requirements, cooked/uncooked usually doesn't make a difference. If it does, then only the valid form will be listed.</p>
-			<h2>About DLC and Don't Starve Together</h2>
+
+			<h3>About DLC and Don't Starve Together</h3>
+
 			<p>
 				Which foods and recipes exist in each version of the game gets a little complicated. For this reason, there are buttons in the upper-left that let you switch modes for a game. Click on a badge to switch to the mode for that game; you can also right-click on badges to toggle their individual recipes and ingredients on and off.
 			</p>
 
-			<h2>Simulator</h2>
+			<h2>Sections</h2>
+
+			<h3>Simulator</h3>
 
 			<p>
 				The Simulator works like a Crock Pot: add items, and it will tell you what food will be prepared. Note that only the highest-priority recipes will be candidates when actually cooking in-game.
@@ -93,16 +99,29 @@
 				The suggestions below the real results show what recipes could be made by adding different items to those already in the Crock Pot.
 			</p>
 
-			<h2>Discovery</h2>
+			<h3>Discovery</h3>
 
 			<p>
 				The Discovery tab is finds what recipes can be prepared using a collection of ingredients. It doesn't take item quantity into account, instead assuming you have four of each.
 				You are also able to calculate efficient recipes using your ingredients to get the most health or hunger benefit from cooking them in the crock pot. This works identically to the Statistics Analyzer tab, but limited to your inventory.
 			</p>
-			<h2>Statistics Analyzer</h2>
+
+			<h3>Statistics Analyzer</h3>
+
 			<p>
 				The Statistics Analyzer tab is for those who just want to explore ingredient combinations. It will calculate every valid ingredient combination possible (using an "ideal" ingredient selection, generally excluding uncooked food) and allows filtration by recipe and ingredient contents. Computation may take some time on slower computers.
 			</p>
+
+			<p>
+				For advanced use, open your browser's JavaScript console. <code>analysis.made</code> contains the list of
+				the working combinations from the last analysis, including beyond those visible in the interface.
+			</p>
+
+			<h2>Advanced Use (JavaScript Globals)</h2>
+
+			<p>The Food Guide populates <code>window</code> with a few properties: <code>food</code>, <code>recipes</code>, and <code>matchingNames</code>. The Statistics Analyzer writes its results to <code>analysis</code> and <code>recipeCrunchData</code>.</p>
+
+			<p>The local state is stored under <code>localStorage.foodGuideState</code>.</p>
 
 			<h2>Links</h2>
 
