--- a/html/index.htm
+++ b/html/index.htm
@@ -25,7 +25,7 @@
 				<li data-tab="crockpot" title="View all recipes for the selected DLC">Recipe List</li>
 				<li data-tab="statistics" title="Find all recipes (unstable)">Statistics Analyzer</li>
 				<li data-tab="help" title="Help and information">Help</li>
-				<li><a title="Give Klei your money" href="http://www.dontstarvegame.com/" target="_blank">Don't Starve</a></li>
+				<li><a title="Give Klei your money" href="https://www.klei.com/games/dont-starve" target="_blank">Don't Starve</a></li>
 			</span>
 		</ul>
 
@@ -61,15 +61,15 @@
 			<h2>About This Food Guide</h2>
 
 			<p>
-				This is an unofficial tool to help avoid starvation in <a href="http://www.dontstarvegame.com/">Don't Starve</a>,
+				This is an unofficial tool to help avoid starvation in <a href="https://www.klei.com/games/dont-starve" target="_blank">Don't Starve</a>,
 				an uncompromising wilderness survival game full of science and magic,
-				by <a href="http://kleientertainment.com/">Klei Entertainment</a>,
-				available on <a href="http://store.steampowered.com/app/219740/">Steam</a>.
+				by <a href="https://klei.com/" target="_blank">Klei Entertainment</a>,
+				available on <a href="https://store.steampowered.com/app/219740/" target="_blank">Steam</a>.
 			</p>
 			<p>This tool requires a modern web browser and is officially supported in recent versions of: Chrome/Chromium, Firefox, Safari, and Edge; on desktop or mobile</p>
 			<p>Maintained as a community effort. Last content addition: <strong>August 6, 2023</strong></p>
 
-			<h2>About Don't Starve Food</h2>
+			<h2>About Don't Starve</h2>
 
 			<h3>Food Mechanics</h3>
 
@@ -127,13 +127,13 @@
 
 			<p><a href="https://github.com/bluehexagons/foodguide/commits/main" target="_blank">Food Guide Change Log</a>
 			<p><a href="https://github.com/bluehexagons/foodguide/issues" target="_blank">Report Food Guide Bugs or Issues</a>
-			<p><a href="http://www.dontstarvegame.com/" target="_blank">Don't Starve Official Website</a>
-			<p><a href="http://dont-starve-game.wikia.com/" target="_blank">Don't Starve on Wikia</a>
+			<p><a href="https://www.klei.com/games/dont-starve" target="_blank">Don't Starve Official Website</a>
+			<p><a href="https://dontstarve.fandom.com/" target="_blank">Don't Starve Wiki on Fandom</a>
 		</div>
 	</div>
 
 	<div id="footer">
-		<a href="http://www.dontstarvegame.com/">Don't Starve</a> &copy; <a href="http://kleientertainment.com/">Klei Entertainment</a>. Unofficial food guide <a href="https://github.com/bluehexagons/foodguide">source code</a> made available under the <a href="http://opensource.org/licenses/MIT">MIT License</a>.
+		<a href="https://www.klei.com/games/dont-starve" target="_blank">Don't Starve</a> &copy; <a href="https://klei.com/">Klei Entertainment</a>. Unofficial food guide <a href="https://github.com/bluehexagons/foodguide">source code</a> made available under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
 	</div>
 
 	<a class="github-link" href="https://github.com/bluehexagons/foodguide" target="_blank">
