Replace background with an SVG file ((c) bluehexagons CC0/public domain)

--- a/html/index.htm
+++ b/html/index.htm
@@ -13,8 +13,7 @@
 		<meta charset='utf-8' />
 		<link rel="stylesheet" href="style/main.css">
 	</head>
-	<body>
-		<div id="background"></div>
+	<body id="background">
 		<div id="content">
 			<div id="main">
 				<ul id="navbar">
