Update wiki links to wiki.gg

--- a/html/index.htm
+++ b/html/index.htm
@@ -160,10 +160,10 @@
 					</h3>
 
 					<ul>
-						<li><a href="https://dontstarve.fandom.com/wiki/Food" target="_blank">Food</a></li>
-						<li><a href="https://dontstarve.fandom.com/wiki/Cooking" target="_blank">Cooking</a></li>
-						<li><a href="https://dontstarve.fandom.com/wiki/Crock_Pot" target="_blank">Crock Pot</a></li>
-						<li><a href="https://dontstarve.fandom.com/wiki/Farming" target="_blank">Farming</a></li>
+						<li><a href="https://dontstarve.wiki.gg/wiki/Food" target="_blank">Food</a></li>
+						<li><a href="https://dontstarve.wiki.gg/wiki/Cooking" target="_blank">Cooking</a></li>
+						<li><a href="https://dontstarve.wiki.gg/wiki/Crock_Pot" target="_blank">Crock Pot</a></li>
+						<li><a href="https://dontstarve.wiki.gg/wiki/Farming" target="_blank">Farming</a></li>
 					</ul>
 
 					<h2>Sections</h2>
@@ -225,7 +225,7 @@
 						<li><a href="https://github.com/bluehexagons/foodguide/commits/main" target="_blank">Food Guide Change Log</a></li>
 						<li><a href="https://github.com/bluehexagons/foodguide/issues" target="_blank">Report Food Guide Bugs or Issues</a></li>
 						<li><a href="https://www.klei.com/games/dont-starve" target="_blank">Don't Starve Official Website</a></li>
-						<li><a href="https://dontstarve.fandom.com/" target="_blank">Don't Starve Wiki on Fandom</a></li>
+						<li><a href="https://dontstarve.wiki.gg/" target="_blank">Don't Starve Wiki on Fandom</a></li>
 					</ul>
 				</div>
 			</div>
